--- a/test/test.html
+++ b/test/test.html
@@ -12,12 +12,19 @@
 
 
 <body>
-    <nav class="gNav" id="gNav">
-        <ul class="gNav__list">
-            <li><a href="aaa.html"><span>link</span></a></li>
-            <li><a href="aaa.html"><span>link</span></a></li>
-            <li><a href="aaa.html"><span>link</span></a></li>
-        </ul>
-    </nav>
+    <div class="wrapper" id="wrapper">
+        <nav class="gNav" id="gNav">
+            <ul class="gNav__list">
+                <li><a href="aaa.html"><span>link</span></a></li>
+                <li><a href="aaa.html"><span>link</span></a></li>
+                <li><a href="aaa.html"><span>link</span></a></li>
+            </ul>
+        </nav>
+        <table class="table_class">
+            <tr>
+                <td colspan="3" rowspan="3">td</td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
