これがワイのコミットや！

--- a/test/test.html
+++ b/test/test.html
@@ -16,7 +16,11 @@
         <nav class="gNav" id="gNav">
             <ul class="gNav__list">
                 <li><a href="aaa.html"><span>link</span></a></li>
-                <li><a href="aaa.html"><span>link</span></a></li>
+                <li><a href="aaa.html"><span>
+                  link
+                  link
+                  link
+                </span></a></li>
                 <li><a href="aaa.html"><span>link</span></a></li>
             </ul>
         </nav>
