test: analyze current rules.

--- a/spec/fixtures/copyFrom.html
+++ b/spec/fixtures/copyFrom.html
@@ -10,6 +10,7 @@
 <body>
     <!-- Copy start -->
 ^^^^<div class="wrapper" id="wrapper">
+        This is the beginning.
         <nav class="gNav" id="gNav">
             <ul class="gNav__list">
                 <li><a href="aaa.html"><span>link</span></a></li>
@@ -21,6 +22,8 @@
                 <li><a href="aaa.html"><span>link</span></a></li>
             </ul>
         </nav>
+        When <b>you</b> gaze into the <b>abyss</b>,<br>
+        the <b>abyss</b> gazes into <b>you</b>.
         <table class="table_class">
             <tr>
                 <td colspan="3" rowspan="3">td</td>
