ワイは、テスト時のテキストコピー範囲を自動取得するようにした。

--- a/spec/fixtures/copyFrom.html
+++ b/spec/fixtures/copyFrom.html
@@ -9,7 +9,7 @@
 
 <body>
     <!-- Copy start -->
-    <div class="wrapper" id="wrapper">
+^^^^<div class="wrapper" id="wrapper">
         <nav class="gNav" id="gNav">
             <ul class="gNav__list">
                 <li><a href="aaa.html"><span>link</span></a></li>
@@ -26,7 +26,7 @@
                 <td colspan="3" rowspan="3">td</td>
             </tr>
         </table>
-    </div>
+    </div>$$$$
     <!-- Copy end -->
 </body>
 </html>
