--- a/test/test.html
+++ b/test/test.html
@@ -29,6 +29,9 @@
                 <td colspan="3" rowspan="3">td</td>
             </tr>
         </table>
+        <input type="button" value="-"/>
+        <div>0</div>
+        <input type="button" value="+"/>
     </div>
 </body>
 </html>
