textNodeのダブルクォーテーションとシングルクォーテーションをエスケープ

--- a/spec/fixtures/copyFrom.html
+++ b/spec/fixtures/copyFrom.html
@@ -13,7 +13,7 @@
         This is the beginning.
         <nav class="gNav" id="gNav">
             <ul class="gNav__list">
-                <li><a href="aaa.html"><span>link</span></a></li>
+                <li><a href="aaa.html"><span>link"link'link</span></a></li>
                 <li><a href="aaa.html"><span>
                   link
                   link
