--- a/test/test.html
+++ b/test/test.html
@@ -16,13 +16,16 @@
       This is the beginning.
         <nav class="gNav" id="gNav">
             <ul class="gNav__list">
-                <li><a href="aaa.html"><span>link</span></a></li>
+                <li><div>&lt;&gt;&amp;&nbsp;&quot;&#39;</div></li>
+                <li><a href="aaa.html"><span>"link"</span></a></li>
                 <li><a href="aaa.html"><span>
                   link
                   link
                   link
                 </span></a></li>
-                <li><a href="aaa.html"><span>link</span></a></li>
+                <li><a href="aaa.html">コメントじゃない</span></a></li>
+                <li><a href="aaa.html"><!--<span>コメント</span>--></a></li>
+                <div></div>
             </ul>
         </nav>
         When <b>you</b> gaze into the <b>abyss</b>,<br>
