"と'エスケープ #

--- a/spec/fixtures/copyFrom.html
+++ b/spec/fixtures/copyFrom.html
@@ -14,6 +14,7 @@
         <nav class="gNav" id="gNav">
             <ul class="gNav__list">
                 <li><a href="aaa.html"><span>link"link'link</span></a></li>
+                <li><a href="aaa.html"><span>link&quot;link&#39;link</span></a></li>
                 <li><a href="aaa.html"><span>
                   link
                   link
