--- a/spec/fixtures/copyFrom.html
+++ b/spec/fixtures/copyFrom.html
@@ -13,8 +13,8 @@
         This is the beginning.
         <nav class="gNav" id="gNav">
             <ul class="gNav__list">
-                <li><a href="aaa.html"><span>link"link'link</span></a></li>
-                <li><a href="aaa.html"><span>link&quot;link&#39;link</span></a></li>
+                <li><a href="aaa.html"><span>link"li nk'link</span></a></li>
+                <li><a href="aaa.html"><span>link&quot;li&nbsp;nk&#39;link</span></a></li>
                 <li><a href="aaa.html"><span>
                   link
                   link
