--- a/test/test.html
+++ b/test/test.html
@@ -16,7 +16,8 @@
       This is the beginning.
         <nav class="gNav" id="gNav">
             <ul class="gNav__list">
-                <li><div>&lt;&gt;&amp;&nbsp;&quot;&#39;</div></li>
+                <li><a href="aaa.html"><span>link"li nk'link</span></a></li>
+                <li><a href="aaa.html"><span>link&quot;li&nbsp;nk&#39;link</span></a></li>
                 <li><a href="aaa.html"><span>"link"</span></a></li>
                 <li><a href="aaa.html"><span>
                   link
