コメントテスト追加

--- a/spec/fixtures/copyFrom.html
+++ b/spec/fixtures/copyFrom.html
@@ -13,6 +13,7 @@
         This is the beginning.
         <nav class="gNav" id="gNav">
             <ul class="gNav__list">
+                <li>文字<!--コメント-->文字</li>
                 <li><div>&nbsp;&nbsp;&lt;&gt;&amp;&nbsp;&nbsp;&quot;&#39;&nbsp;&nbsp;</div></li>
                 <li><a href="aaa.html"><span>link"li nk'link</span></a></li>
                 <li><a href="aaa.html"><span>link&quot;li&nbsp;nk&#39;link</span></a></li>
