--- a/test/test.html
+++ b/test/test.html
@@ -13,22 +13,19 @@
 
 <body>
     <div class="wrapper" id="wrapper">
-      This is the beginning.
+        This is the beginning.
         <nav class="gNav" id="gNav">
             <ul class="gNav__list">
                 <li>文字<!--コメント-->文字</li>
                 <li><div>&nbsp;&nbsp;&lt;&gt;&amp;&nbsp;&nbsp;&quot;&#39;&nbsp;&nbsp;</div></li>
                 <li><a href="aaa.html"><span>link"li nk'link</span></a></li>
                 <li><a href="aaa.html"><span>link&quot;li&nbsp;nk&#39;link</span></a></li>
-                <li><a href="aaa.html"><span>"link"</span></a></li>
                 <li><a href="aaa.html"><span>
                   link
                   link
                   link
                 </span></a></li>
-                <li><a href="aaa.html">コメントじゃない</span></a></li>
-                <li><a href="aaa.html"><!--<span>コメント</span>--></a></li>
-                <div></div>
+                <li><a href="aaa.html"><span>link</span></a></li>
             </ul>
         </nav>
         When <b>you</b> gaze into the <b>abyss</b>,<br>
